# VisionGal

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.txt
Application/VGDesktopApplication/: CMakeLists.txt  Main.cpp
Application/VGDesktopApplication/Include/: ApplicationInitializer.h  VGDesktopApplication.h
Application/VGDesktopApplication/Source/: ApplicationInitializer.cpp  VGDesktopApplication.cpp
Application/VGPackageTool/: CMakeLists.txt  Main.cpp
Application/VGPackageTool/Include/: MainWindow.h  VGPackageApp.h  VGPackageTool.h
Application/VGPackageTool/Source/: MainWindow.cpp  VGPackageApp.cpp  VGPackageTool.cpp
Editor/VGEditorFramework/: CMakeLists.txt  Framework.h
Editor/VGEditorFramework/Include/: Config.h  PanelManager.h  UIInterface.h  pch.h
Editor/VGEditorFramework/Include/AssetEditor/: AssetEditor.h  TextureViewer.h
Editor/VGEditorFramework/Include/EditorComponents/: ConsolePanel.h  FileSystem.h  PanelInterface.h  SceneBrowser.h  TextEditor.h  Viewport.h
Editor/VGEditorFramework/Include/EditorCore/: ContentBrowser.h  EditorCore.h  EditorPreferences.h  EditorSettingInterface.h  EdtiorScene.h  Localization.h  MenuItem.h
Editor/VGEditorFramework/Include/MainEditor/: MainPanel.h  MenuBar.h  SideBar.h
Editor/VGEditorFramework/Include/Setting/: BuildSettingsPanel.h  PreferencesPanel.h  ProjectSettingsPanel.h  ProjectSettingsWrapper.h  Style.h
Editor/VGEditorFramework/Include/UITask/: MessageUITask.h
Editor/VGEditorFramework/Source/: PanelManager.cpp
Editor/VGEditorFramework/Source/AssetEditor/: AssetEditor.cpp  TextureViewer.cpp
Editor/VGEditorFramework/Source/EditorComponents/: ConsolePanel.cpp  FileSystem.cpp  SceneBrowser.cpp  TextEditor.cpp  Viewport.cpp
Editor/VGEditorFramework/Source/EditorCore/: ContentBrowser.cpp  EditorCore.cpp  EditorPreferences.cpp  EditorSettingInterface.cpp  EdtiorScene.cpp  Localization.cpp  MenuItem.cpp
Editor/VGEditorFramework/Source/MainEditor/: MainPanel.cpp  MenuBar.cpp  SideBar.cpp
Editor/VGEditorFramework/Source/Setting/: BuildSettingsPanel.cpp  PreferencesPanel.cpp  ProjectSettingsPanel.cpp  ProjectSettingsWrapper.cpp  Style.cpp
Editor/VGEditorFramework/Source/UITask/: MessageUITask.cpp
Runtime/HCore/: CMakeLists.txt  IncludeCore.h
Runtime/HCore/.Generated/: .meta-cache  HConfig.Generated.cpp  HConfig.Generated.h  Meta.Generated.cpp  Meta.Generated.h  MetaExport.cpp  MetaExport.h
Runtime/HCore/.Generated/Event/: HWindowEvents.Generated.cpp  HWindowEvents.Generated.h
Runtime/HCore/.Generated/System/: HFileWatcher.Generated.cpp  HFileWatcher.Generated.h
Runtime/HCore/Include/: CoreModuleDefinitions.h  HConfig.h  pch.h
Runtime/HCore/Include/Asset/: HAsset.h  HPackage.h
Runtime/HCore/Include/Core/: HAssert.h  HColors.h  HContainers.h  HCore.h  HCoreTypes.h  HException.h  HGraphicsTypes.h  HLocalization.h  HLog.h  HMemory.h  HObjectGlobals.h  HRandom.h  HSTL.h  HSerialization.h  HSingleton.h  HStringTools.h  HSystem.h  HThreadPool.h  HTypeInfo.h  HUUID.h  HVirtualFileSystem.h
Runtime/HCore/Include/Event/: GlobalEventBus.cpp  GlobalEventBus.h  HEventBase.h  HEventDelegate.h  HEventQueue.h  HWindowEvents.cpp  HWindowEvents.h
Runtime/HCore/Include/File/: HIniFile.h  HJson.h  HJsonTypeHandler.h  NlohmannJson.h
Runtime/HCore/Include/Math/: Frustum.h  HMath.h  HMathHelper.h  HVector.h  MatrixDecomposition.h
Runtime/HCore/Include/Meta/: Attribute.h  Macros.h  Meta.h  MetaCommonDefinitions.h  ReflectionDatabase.cpp  ReflectionDatabase.h  ReflectionModule.cpp  ReflectionModule.h  Type.h
Runtime/HCore/Include/Misc/: hXXHash.cpp  hXXHash.h  xxhash.h
Runtime/HCore/Include/Platform/: PlatformCheck.h  WindowInterface.h
Runtime/HCore/Include/Scene/: HBaseComponent.h  HComponentInterface.h  HEntityInterface.h  HSceneHierachy.h  HSceneInterface.h
Runtime/HCore/Include/System/: HClipboard.h  HCpuInfo.h  HFileHeaders.h  HFileSystem.h  HFileWatcher.h  HInput.h  HLocale.h  HMemoryStream.h  HMessageBox.h  HStream.h  HSystemMisc.h  HSystemTimer.h  HTimer.h  HWindow.h
Runtime/HCore/Include/Utils/: HFileSystemGenerator.h  HStringGenerator.h
Runtime/HCore/Include/VFS/: IFileSystem.h  MemoryFile.hpp  MemoryFileSystem.hpp  NativeFile.hpp  NativeFileSystem.hpp  ZipFile.hpp  ZipFileSystem.hpp
Runtime/HCore/Source/Asset/: HPackage.cpp
Runtime/HCore/Source/Core/: HCore.cpp  HException.cpp  HLocalization.cpp  HLog.cpp  HMemory.cpp  HObjectGlobals.cpp  HStringTools.cpp  HUUID.cpp
Runtime/HCore/Source/File/: HIniFile.cpp  HJson.cpp  HJsonTypeHandler.cpp
Runtime/HCore/Source/Scene/: HEntityInterface.cpp  HSceneHierachy.cpp
Runtime/HCore/Source/System/: HClipboard.cpp  HCpuInfo.cpp  HFileSystem.cpp  HFileWatcher.cpp  HInput.cpp  HLocale.cpp  HMemoryStream.cpp  HMessageBox.cpp  HSystemMisc.cpp  HSystemTimer.cpp  HTimer.cpp  HWindow.cpp
Runtime/HCore/Source/Utils/: HFileSystemGenerator.cpp
Runtime/VGEngine/: CMakeLists.txt
Runtime/VGEngine/Include/: EngineConfig.h  pch.h
Runtime/VGEngine/Include/Asset/: Asset.h  AssetFactory.h  AudioAsset.h  GalGameAsset.h  LuaScriptAsset.h  Package.h  SceneAsset.h  TextureAsset.h  UIAsset.h  VideoAsset.h
Runtime/VGEngine/Include/Audio/: AudioTransform.h  AudioTransformScript.h  AudioTransformScriptManager.h
Runtime/VGEngine/Include/Core/: Application.h  Core.h  CoreTypes.h  EventBus.h  Events.h  Input.h  Types.h  VFS.h  Viewport.h  Window.h
Runtime/VGEngine/Include/Engine/: EngineResource.h  ImGuiLayer.h  Manager.h  UISystem.h  VGEngine.h
Runtime/VGEngine/Include/Galgame/: Components.h  (+14 more)
Runtime/VGImgui/: CMakeLists.txt  IncludeImGui.h  IncludeImGuiEx.h  IncludeImGuiLayer.h
Runtime/VGImgui/Include/: imconfig.h  pch.h
Runtime/VGLua/: CMakeLists.txt
Runtime/VGPackage/: CMakeLists.txt
Runtime/VGPackage/Include/: Config.h  PackageFile.h  PackageFileSystem.h  PakCrc32.h  PakFormat.h  PakReader.h  PakWriter.h
Runtime/VGPackage/Source/: PakCrc32.cpp  PakFormat.cpp  PakReader.cpp  PakWriter.cpp
Tests/VGLauncherTest/: CMakeLists.txt  Main.cpp
Tests/VGLauncherTest/Include/: TestProjectCreator.hpp  TestVGLauncherData.hpp
(+598 files in other folders)
